--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Emocionometro.loader.js";
+      var loaderUrl = buildUrl + "/emocionometro-webgl.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Emocionometro.data",
-        frameworkUrl: buildUrl + "/Emocionometro.framework.js",
-        codeUrl: buildUrl + "/Emocionometro.wasm",
+        dataUrl: buildUrl + "/emocionometro-webgl.data",
+        frameworkUrl: buildUrl + "/emocionometro-webgl.framework.js",
+        codeUrl: buildUrl + "/emocionometro-webgl.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Emocionometro",
