--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
   </head>
   <body>
     <!-- <div id="unity-container" class="unity-desktop"> -->
-    <div id="unity-container" style="width: 99.5%; height: 99.5%">
-      <!-- <canvas id="unity-canvas" width=960 height=600></canvas> -->
-      <canvas id="unity-canvas" width=auto height=auto></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
+      <div id="unity-container" style="width: 99.5%; height: 99.5%">
+        <!-- <canvas id="unity-canvas" width=960 height=600></canvas> -->
+        <canvas id="unity-canvas" width="auto" height="auto"></canvas>
+        <div style="display: none;">
+          <div id="unity-loading-bar">
+            <div id="unity-logo"></div>
+            <div id="unity-progress-bar-empty">
+              <div id="unity-progress-bar-full"></div>
+            </div>
+          </div>
         </div>
-      </div>
       <div style="display: none;">
         <div id="unity-warning"> </div>
         <div id="unity-footer">
           <div id="unity-webgl-logo"></div>
           <div id="unity-fullscreen-button"></div>
-          <div id="unity-build-title">Emocionometro</div>
+          <div id="unity-build-title">Emocionômetro</div>
         </div>
       </div>
     </div>
